Uređen view, poboljšan detaljni pregled app
Uređen je view svake ponude u ispisu ponuda, uređen je view detaljnog
pregleda ponude, dodan link na web od ponude

--- a/DajSveApp/app/src/main/res/layout/detalji_ponude_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/detalji_ponude_fragment.xml
@@ -6,104 +6,134 @@
     android:layout_below="@+id/toolbar"
     android:id="@+id/skrolanje">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent" android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="2dp">
 
-
-        <ImageView
-            android:id="@+id/ponuda_image"
-            android:layout_height="160dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_width="230dp"
-            android:scaleType="fitCenter"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            />
-
-        <TextView
-            android:id="@+id/ponuda_cijena"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textIsSelectable="false"
-            tools:text="Nova cijena"
-            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
-            android:textSize="20sp"
-            android:textColor="?android:textColorPrimaryDisableOnly"
-            android:fontFamily="serif"
-            android:layout_marginEnd="15dp"
-            android:layout_marginTop="25dp"
-            android:layout_alignTop="@+id/ponuda_image"
-            android:layout_alignParentEnd="true" />
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-        <TextView
-            android:id="@+id/ponuda_original"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textIsSelectable="false"
-            tools:text="Redovna cijena"
-            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
-            android:textSize="18sp"
-            android:textColor="?android:textColorSecondaryNoDisable"
-            android:fontFamily="serif"
-            android:layout_below="@+id/ponuda_cijena"
-            android:layout_alignEnd="@+id/ponuda_cijena"
-            android:layout_marginTop="13dp" />
+            <TextView
+                android:text="Otvori ponudu"
+                android:layout_width="wrap_content"
+                android:layout_weight=".99"
+                android:layout_height="wrap_content"
+                android:id="@+id/link_na_stranicu"
+                android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
+                android:textSize="19sp"
+                android:textColor="?android:textColorPrimaryDisableOnly"
+                android:layout_alignBaseline="@+id/checkBox"
+                android:layout_toRightOf="@+id/checkBox"
+                android:layout_marginLeft="5dp"
+                android:textAlignment="center"
+                android:textColorLink="@color/colorPrimary"/>
 
-        <TextView
-            android:id="@+id/ponuda_popust"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textIsSelectable="false"
-            tools:text="Popust"
-            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
-            android:textSize="19sp"
-            android:textColor="?android:textColorPrimaryDisableOnly"
-            android:layout_centerInParent="@+id/ponuda_cijena"
-            android:fontFamily="serif"
-            android:layout_below="@+id/ponuda_original"
-            android:layout_alignEnd="@+id/ponuda_original"
-            android:layout_marginTop="8dp" />
+            <TextView
+                android:text="Dodaj u favorite!"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/hover_poruka"
+                android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
+                android:textSize="19sp"
+                android:textColor="?android:textColorPrimaryDisableOnly"
+                android:layout_alignBaseline="@+id/checkBox"
+                android:layout_toRightOf="@+id/checkBox"
+                android:layout_marginLeft="5dp"/>
 
-        <TextView
-            android:id="@+id/ponuda_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginStart="0dp"
-            android:layout_below="@+id/ponuda_image"
-            android:textIsSelectable="false"
-            tools:text="Naziv ponude"
-            android:textSize="20sp"
-            android:textColor="?android:textColorPrimaryDisableOnly"
-            android:fontFamily="serif"
-            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
-            android:onClick="onClick"
-            android:clickable="true" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:id="@+id/checkBox"
+                android:button="@drawable/favoritebutton"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.06" />
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox"
-            android:layout_below="@id/ponuda_name"
-            android:button="@drawable/favoritebutton"
-            android:layout_marginLeft="20dp"
-            />
+        </LinearLayout>
 
-        <TextView
-            android:text="Dodaj u favorite!"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/hover_poruka"
-            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
-            android:textSize="19sp"
-            android:textColor="?android:textColorPrimaryDisableOnly"
-            android:layout_alignBaseline="@+id/checkBox"
-            android:layout_toRightOf="@+id/checkBox"
-            android:layout_marginLeft="5dp"/>
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent" android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/ponuda_image"
+                android:layout_height="160dp"
+                android:src="@mipmap/ic_launcher"
+                android:layout_width="230dp"
+                android:scaleType="fitCenter"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                />
+
+            <TextView
+                android:id="@+id/ponuda_cijena"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textIsSelectable="false"
+                tools:text="Nova cijena"
+                android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
+                android:textSize="20sp"
+                android:textColor="?android:textColorPrimaryDisableOnly"
+                android:fontFamily="serif"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="25dp"
+                android:layout_alignTop="@+id/ponuda_image"
+                android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:id="@+id/ponuda_original"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textIsSelectable="false"
+                tools:text="Redovna cijena"
+                android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
+                android:textSize="18sp"
+                android:textColor="?android:textColorSecondaryNoDisable"
+                android:fontFamily="serif"
+                android:layout_below="@+id/ponuda_cijena"
+                android:layout_alignEnd="@+id/ponuda_cijena"
+                android:layout_marginTop="13dp" />
+
+            <TextView
+                android:id="@+id/ponuda_popust"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textIsSelectable="false"
+                tools:text="Popust"
+                android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
+                android:textSize="19sp"
+                android:textColor="?android:textColorPrimaryDisableOnly"
+                android:layout_centerInParent="@+id/ponuda_cijena"
+                android:fontFamily="serif"
+                android:layout_below="@+id/ponuda_original"
+                android:layout_alignEnd="@+id/ponuda_original"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:id="@+id/ponuda_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginStart="0dp"
+                android:layout_below="@+id/ponuda_image"
+                android:textIsSelectable="false"
+                tools:text="Naziv ponude"
+                android:textSize="20sp"
+                android:textColor="?android:textColorPrimaryDisableOnly"
+                android:fontFamily="serif"
+                android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
+                android:onClick="onClick"
+                android:clickable="true" />
+
+
+
+        </RelativeLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -128,118 +158,6 @@
             android:layout_alignStart="@+id/mapa_prikaz"
             android:alpha=".1"/>
 
+    </LinearLayout>
 
-
-
-        <!--
-        <TextView
-            android:id="@+id/ponuda_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:textIsSelectable="false"
-            tools:text="Naziv ponude"
-            android:layout_below="@+id/ponuda_image"
-            android:layout_alignParentStart="true"
-            android:textSize="20sp"
-            android:textColor="?android:textColorPrimaryDisableOnly"
-            android:fontFamily="serif"
-            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"/>
-
-
-        <TextView
-            android:id="@+id/ponuda_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:textIsSelectable="false"
-            tools:text="Opis ponude"
-            android:layout_below="@+id/ponuda_name"
-            android:layout_alignStart="@+id/ponuda_name"
-            android:layout_alignEnd="@+id/ponuda_name" />
-
-
-        <TextView
-            android:text="Datum ponude"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="33dp"
-            android:id="@+id/ponuda_datum"
-            android:layout_below="@+id/ponuda_cijena"
-            android:layout_alignStart="@+id/ponuda_cijena" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="18dp"
-            android:layout_below="@+id/ponuda_datum"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/mapa_prikaz">
-
-        </FrameLayout>
-
-        <TextView
-            android:text="Cijena"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:id="@+id/ponuda_cijena"
-            android:layout_below="@+id/ponuda_name"
-            android:layout_alignStart="@+id/ponuda_name" />
-
-        <TextView
-            android:text="UĹˇteda"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ponuda_usteda"
-            android:layout_alignBaseline="@+id/ponuda_popust"
-            android:layout_alignBottom="@+id/ponuda_popust"
-            android:layout_alignStart="@+id/ponuda_original" />
-
-        <TextView
-            android:text="Popust"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ponuda_popust"
-            android:layout_above="@+id/mapa_prikaz"
-            android:layout_alignStart="@+id/ponuda_datum"
-            android:layout_marginBottom="15dp" />
-
-        <TextView
-            android:text="Dodaj u favorite!"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/hover_poruka"
-            android:layout_alignBottom="@+id/ponuda_image"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="23dp" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkBox"
-            android:layout_above="@+id/hover_poruka"
-            android:button="@drawable/favoritebutton"
-            android:layout_alignEnd="@+id/hover_poruka" />
-
-        <ImageView
-            android:id="@+id/ponuda_image"
-            android:layout_height="95dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_width="270dp"
-            android:layout_alignParentTop="true" />
-
-
-
-        <TextView
-            android:text="Cijena original"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ponuda_original"
-            android:layout_alignBaseline="@+id/ponuda_cijena"
-            android:layout_alignBottom="@+id/ponuda_cijena"
-            android:layout_centerHorizontal="true" />
-            -->
-
-    </RelativeLayout>
 </ScrollView>
