--- a/DajSveApp/app/src/main/res/layout/sve_ponude_item.xml
+++ b/DajSveApp/app/src/main/res/layout/sve_ponude_item.xml
@@ -85,35 +85,31 @@
 
             <ImageView
                 android:id="@+id/ponuda_image"
-                android:layout_height="160dp"
+                android:layout_height="150dp"
                 android:src="@mipmap/ic_launcher"
                 android:layout_width="230dp"
                 android:scaleType="fitCenter"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="28dp"
-                android:layout_marginTop="28dp" />
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="13dp" />
 
 
         </RelativeLayout>
 
-            <TextView
-                android:id="@+id/ponuda_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="3dp"
-                android:layout_marginStart="0dp"
-                android:textIsSelectable="false"
-                tools:text="Naziv ponude"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textSize="13sp" />
-
-
-
-
-
+        <TextView
+            android:id="@+id/ponuda_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:textIsSelectable="false"
+            tools:text="Naziv ponude"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
