--- a/DajSveApp/app/src/main/res/layout/favoriti_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/favoriti_fragment.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <TextView
-        android:text="Detalji ponude"
+        android:text="Trenutno nemate favorita"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
