--- a/DajSveApp/app/src/main/res/values/colors.xml
+++ b/DajSveApp/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="navigationColor">#472d70</color>
+    <color name="bijela">#ffffff</color>
 </resources>
