--- a/DajSveApp/app/src/main/res/layout/favoriti_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/favoriti_fragment.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/sve_ponude_fragment" android:tag="sve_ponude_fragment_tag">
 
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/rv">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
     <TextView
+        android:layout_centerInParent="true"
         android:text="Trenutno nemate favorita"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,4 +27,5 @@
         android:textSize="20sp"
         android:layout_centerHorizontal="true"
         />
+
 </RelativeLayout>
