Napravljeno dodavanje i brisanja kategorija
Napravljeno dodavanje i brisanja kategorija i fix xmla

--- a/DajSveApp/app/src/main/res/layout/moje_kategorije_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/moje_kategorije_fragment.xml
@@ -2,6 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+
+
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipeContainer"
@@ -12,9 +14,19 @@
         <android.support.v7.widget.RecyclerView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:id="@+id/rv">
+            android:id="@+id/rv"
+            android:layout_alignParentEnd="true">
 
         </android.support.v7.widget.RecyclerView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
+    <TextView
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        />
 </RelativeLayout>
