--- a/DajSveApp/app/src/main/res/layout/favoriti_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/favoriti_fragment.xml
@@ -20,12 +20,12 @@
     </android.support.v4.widget.SwipeRefreshLayout>
     <TextView
         android:layout_centerInParent="true"
-        android:text="Trenutno nemate favorita"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
         android:textSize="20sp"
         android:layout_centerHorizontal="true"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
         />
 
 </RelativeLayout>
