--- a/DajSveApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/DajSveApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,28 +7,34 @@
     tools:context="com.example.filip.dajsve.Activities.SplashScreenActivity"
     android:background="@color/navigationColor">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="100dp"
-            android:scaleType="fitXY"
-            android:layout_height="36.36dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/dajsvebijeli" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true">
 
         <TextView
             android:layout_width="306dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="16sp"
+            android:id="@+id/splash_screen_tekst"
             android:text="Svi popusti na jednom mjestu"
-            android:textColor="@color/bijela"/>
+            android:textColor="@color/bijela"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="274dp" />
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="100dp"
+            android:scaleType="fitCenter"
+            android:layout_height="36.36dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/splash_screen_logo"
+            android:src="@drawable/dajsvebijeli"
+            android:layout_above="@+id/splash_screen_tekst"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="330dp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
