--- a/DajSveApp/app/src/main/res/layout/detalji_ponude_fragment.xml
+++ b/DajSveApp/app/src/main/res/layout/detalji_ponude_fragment.xml
@@ -162,12 +162,15 @@
             </LinearLayout>
 
         </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:id="@+id/mapa_prikaz"
-            android:layout_below="@+id/checkBox"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true">
 
@@ -185,7 +188,7 @@
             android:layout_marginLeft="10dp"
             android:layout_alignStart="@+id/mapa_prikaz"
             android:alpha=".1"/>
-
+    </RelativeLayout>
     </LinearLayout>
 
 </ScrollView>
