Promjena naziva paketa, čišćenje repozitorija
Promijenjen je naziv osnovnog paketa (hr.foi.air.dajsve), maknut je
example, obrisan je nepotrebni direktorij .idea

--- a/DajSveApp/app/src/main/res/layout/activity_main.xml
+++ b/DajSveApp/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/linearlayout"
-        tools:context="com.example.filip.dajsve.Activities.MainActivity">
+        tools:context="com.example.filip.dajsve.dajsve.example.filip.dajsve.Activities.MainActivity">
 
 
 
